Solve text overflow

--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -6,7 +6,7 @@
 
   &__image {
     width: 100%;
-    height: auto;
+    height: 500px;
   }
 
   &__text {
@@ -14,5 +14,7 @@
     top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
+    font-size: 1.5em;
+    font-weight: bold;
   }
 }
